--- a/Psei/Base.lproj/Main.storyboard
+++ b/Psei/Base.lproj/Main.storyboard
@@ -104,7 +104,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" pagingEnabled="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xrU-gB-2xh">
-                                <rect key="frame" x="0.0" y="126" width="768" height="898"/>
+                                <rect key="frame" x="0.0" y="170" width="768" height="854"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cellListaBancos" textLabel="X9M-EI-Zqq" detailTextLabel="TGy-I8-P4g" rowHeight="44" style="IBUITableViewCellStyleSubtitle" id="dW6-jU-Epj">
@@ -140,9 +140,13 @@
                                     <outlet property="delegate" destination="skK-jo-VmZ" id="GEF-jE-D5A"/>
                                 </connections>
                             </tableView>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="SLA-K2-qOa">
-                                <rect key="frame" x="0.0" y="70" width="768" height="56"/>
+                            <searchBar contentMode="redraw" barStyle="black" placeholder="Inserte un texto de búsqueda" showsCancelButton="YES" showsScopeBar="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SLA-K2-qOa">
+                                <rect key="frame" x="0.0" y="70" width="768" height="100"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <scopeButtonTitles>
+                                    <string>Código</string>
+                                    <string>Nombre</string>
+                                </scopeButtonTitles>
                                 <connections>
                                     <outlet property="delegate" destination="skK-jo-VmZ" id="eHD-7g-7yF"/>
                                 </connections>
@@ -160,7 +164,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="c8A-Gl-nRk"/>
                     </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics"/>
                     <connections>
+                        <outlet property="searchBar" destination="SLA-K2-qOa" id="UQZ-Lk-tc2"/>
                         <outlet property="table" destination="xrU-gB-2xh" id="ImX-fi-UKX"/>
                     </connections>
                 </viewController>
@@ -168,7 +174,7 @@
             </objects>
             <point key="canvasLocation" x="2250" y="360"/>
         </scene>
-        <!--Nuevo Banco View Controller-->
+        <!--Item-->
         <scene sceneID="9gn-ir-f9u">
             <objects>
                 <viewController storyboardIdentifier="NuevoBanco" id="NJW-Fq-hY9" customClass="NuevoBancoViewController" customModule="Psei" customModuleProvider="target" sceneMemberID="viewController">
@@ -233,8 +239,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Pes-F7-p9F"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="cgP-UG-LaH"/>
                     <toolbarItems/>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="DireccionText" destination="hYI-5u-yvz" id="j3I-ej-goa"/>
                         <outlet property="NombreText" destination="bZH-av-TXY" id="auv-0D-8NH"/>
